@startuml

skinparam componentStyle uml2

package "'Funcionario' Aggregate" <<Rectangle>> {
	class Funcionario <<(A,#fffab8) Aggregate Root>> {
		String nome
		String funcao
		String contato
		String status
		FuncionarioId_Adm id
	}
	class br.com.medflow.dominio.administracao.funcionarios.RunCucumberTest.Medico <<(E,DarkSeaGreen) Entity>> {
		CRM crm
		EspecialidadeId_Ref especialidade
		boolean podeSerDesativado()
	}
	class FuncionarioId_Adm <<(V,DarkSeaGreen) Value Object>> {
		String codigo
	}
	class MedicoId_Adm <<(V,DarkSeaGreen) Value Object>> {
	}
	class CRM <<(V,DarkSeaGreen) Value Object>> {
		String numero
		String uf
	}
}
br.com.medflow.dominio.administracao.funcionarios.RunCucumberTest.Medico --> CRM : crm
Funcionario --> FuncionarioId_Adm : id
br.com.medflow.dominio.administracao.funcionarios.RunCucumberTest.Medico --|> Funcionario
MedicoId_Adm --|> FuncionarioId_Adm


@enduml
